--- a/Project.toml
+++ b/Project.toml
@@ -13,3 +13,4 @@ Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StochasticBarrierFunctions = "a06fe262-dd7d-4c83-aa2f-7afdb1a09a89"
 TransitionIntervals = "fe4461bf-3609-400d-85d7-d42d16fd8269"
+UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
